--- a/Styles/github-css.css
+++ b/Styles/github-css.css
@@ -1,3 +1,19 @@
+table {
+	border-collapse: collapse;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 16pt;
+	line-height: 1.5;
+	overflow-wrap: break-word;
+}
+
+td {
+	border: 1px solid black;
+}
+
+th {
+	border: 1px solid black;
+	background-color: #eeeeee;
+}
 
 body {
 	padding: 0;
@@ -46,7 +62,9 @@ span {
 }
 
 li a {
-	min-height: 50px;
+	padding-top: .5%;
+	padding-bottom: .5%;
+	min-height: 1%;
 	margin: auto;
 	display: block;
 	color: #fff;
