--- a/Styles/github-css.css
+++ b/Styles/github-css.css
@@ -31,8 +31,8 @@ img {
 }
 
 a img {
-	height: 5%;
-	width: 5%;
+	height: auto;
+	width: auto;
 	min-width: 50px;
 	min-height: 50px;
 	max-height: 100px;
